--- a/css/style.css
+++ b/css/style.css
@@ -158,7 +158,8 @@ body {
 }
 
 .resume .resume_right .resume_work ul,
-.resume .resume_right .resume_education ul {
+.resume .resume_right .resume_education ul,
+.resume .resume_right .resume_project ul {
   padding-left: 40px;
   overflow: hidden;
 }
@@ -182,7 +183,8 @@ body {
 }
 
 .resume .resume_right .resume_work ul li:before,
-.resume .resume_right .resume_education ul li:before {
+.resume .resume_right .resume_education ul li:before
+ {
   content: "";
   position: absolute;
   top: 5px;
@@ -235,3 +237,4 @@ body {
 .resume .resume_right .resume_hobby ul li:last-child:before {
   display: none;
 }
+
