--- a/css/style.css
+++ b/css/style.css
@@ -94,6 +94,7 @@ body {
   color: #0bb5f4;
   border-radius: 50%;
   margin-right: 15px;
+  margin-bottom: 15px;
   font-size: 17px;
   position: relative;
 }
