--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,5 @@
+@import url(https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css);
+
 * {
   margin: 0;
   padding: 0;
@@ -8,15 +10,24 @@
 
 body {
   background: #585c68;
-  font-size: 15px;
+  font-size: 16px;
   line-height: 20px;
   color: #555555;
   font-weight: 500;
 }
 
+* div a,
+* div a:hover {
+    text-decoration: none;
+}
+
+a:hover  {
+  color: silver !important;
+}
+
 .bold {
-  font-weight: 700;
-  font-size: 22px;
+  font-weight: 750;
+  font-size: 23px;
   text-transform: uppercase;
   text-align: center;
 }
@@ -27,7 +38,7 @@ body {
 }
 
 .resume {
-  width: 950px;
+  width: 970px;
   height: auto;
   display: flex;
   margin: 50px auto;
@@ -41,7 +52,7 @@ body {
 .resume .resume_left .resume_profile {
   max-width: 60%;
   max-height: 300px;
-  margin-left: 75px;
+  margin-left: 77px;
   overflow: hidden;
 }
 
@@ -120,7 +131,7 @@ body {
 }
 
 .resume .resume_left .resume_skills ul li .skill_name {
-  width: 20%;
+  width: 25%;
 }
 
 .resume .resume_left .resume_skills ul li .skill_progress {
@@ -148,6 +159,14 @@ body {
   margin-bottom: 3px;
 }
 
+body .resume_social div a {
+  color: #b1eaff;
+}
+
+body .resume_social div a:hover {
+  color: #fff;
+}
+
 .resume .resume_right {
   width: 720px;
   background: #fff;
@@ -172,39 +191,43 @@ body {
 .resume .resume_right ul li .date {
   font-size: 16px;
   font-weight: 550;
-  margin-bottom: 15px;
+  margin-bottom: 5px;
 }
 
 .resume .resume_right ul li .info {
-  margin-bottom: 20px;
+  margin-bottom: 15px;
 }
 
 .resume .resume_right ul li:last-child .info {
   margin-bottom: 0;
 }
 
-.resume .resume_right .resume_work ul li:before,
-.resume .resume_right .resume_education ul li:before
- {
-  content: "";
-  position: absolute;
-  top: 5px;
-  left: -25px;
-  width: 6px;
-  height: 6px;
-  border-radius: 50%;
-  border: 2px solid #0bb5f4;
-}
-
 .resume .resume_right .resume_work ul li:after,
 .resume .resume_right .resume_education ul li:after {
   content: "";
   position: absolute;
-  top: 14px;
-  left: -21px;
+  top: 11px;
+  left: -22px;
   width: 2px;
-  height: 115px;
+  height: 100px;
   background: #0bb5f4;
+}
+
+.resume .resume_right .resume_work ul li:before,
+.resume .resume_right .resume_education ul li:before {
+  content: "";
+  position: absolute;
+  top: 3px;
+  left: -25px;
+  width: 8px;
+  height: 8px;
+  border-radius: 50%;
+  border: 2px solid #0bb5f4;
+}
+
+.resume .resume_right .resume_hobby ul li:last-child:before,
+.resume .resume_right .resume_education ul li:last-child:before {
+  display: none;
 }
 
 .resume .resume_right .resume_hobby ul {
@@ -235,10 +258,5 @@ body {
   background: #0bb5f4;
 }
 
-.resume .resume_right .resume_hobby ul li:last-child:before {
-  display: none;
-}
 
-a:hover  {
-  color: silver !important;
-}
+
